<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="4dp"
        app:cardElevation="10dp"
        app:contentPadding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="500dp"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/imagi1"
                app:srcCompat="@drawable/imagi1" />


            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imageView6"
                android:layout_toRightOf="@+id/imageView6"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/type_project_title" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editText"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/add_description" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editText2"
                android:layout_marginTop="52dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/add_tags" />

            <Button
                android:id="@+id/buttonShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText4"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="90dp"
                android:onClick="postProject"
                android:text="@string/share" />

        </RelativeLayout>



    </android.support.v7.widget.CardView>
</RelativeLayout>