<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxWidth="450dp"
    android:minWidth="360dp"
    tools:context=".CommunityActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="4dp"
        app:cardElevation="10dp"
        app:contentPadding="10dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="63dp"
                android:layout_height="59dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/user1feed"
                app:srcCompat="@drawable/user1" />


            <TextView
                android:id="@+id/username"
                android:layout_width="195dp"
                android:layout_height="42dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/userImage"
                android:layout_toRightOf="@+id/userImage"
                android:text="@string/user1feed"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/postTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_toEndOf="@+id/userImage"
                android:layout_toRightOf="@+id/userImage"
                android:text="@string/posttime" />

            <ImageView
                android:id="@+id/postImage"
                android:layout_width="match_parent"
                android:layout_height="265dp"
                android:layout_below="@+id/postTime"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="9dp"
                android:contentDescription="@string/imagi1"
                app:srcCompat="@drawable/imagi1" />

            <TextView
                android:id="@+id/postDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/postImage"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="52dp"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="5dp"
                android:text="My first imagelabs project ! It was so fun :)" />

            <TextView
                android:id="@+id/datepost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/postImage"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="86dp"
                android:text="2 DAYS AGO"
                tools:textSize="8sp" />

            <TextView
                android:id="@+id/postDescription3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/postImage"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="4dp"
                android:text="mimmi"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nb_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/postImage"
                android:layout_alignParentStart="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="66dp"
                android:text="6 likes"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginBottom="92dp"
                app:srcCompat="@drawable/outline_thumb_up_black_18dp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginBottom="92dp"
                app:srcCompat="@drawable/baseline_comment_black_18dp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView3"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="92dp"
                android:layout_marginLeft="92dp"
                android:layout_marginTop="0dp"
                app:srcCompat="@drawable/baseline_share_black_18dp" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>